Add data to test correct postings to Postgres database

--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-    Hello, World!
+    {% for user in users %}
+        <p>{{ user.user_name }}</p>
+    {% endfor %}
 
 </body>
 </html>
