--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
+:root {
+    --theme-color: #d50101;
+}
+
 body {
     display: flex;
     min-height: 100vh;
@@ -10,11 +14,45 @@ main {
     flex: 1 0 auto;
 }
   
-.brand-logo {
+.brand-logo,
+.page-title {
     font-family: 'Dancing Script', cursive;
+    font-weight: bold;
 }
 
-nav,
-.page-footer {
-    background-color: #d50101;
+.dropdown-content li>a,
+.dropdown-content li>span,
+.sidenav li>a,
+.theme-color {
+    color: var(--theme-color);
 }
+
+.main-text {
+    font-size: x-large;
+}
+
+.page-footer,
+nav {
+    background-color: var(--theme-color);
+}
+
+/* Code taken and adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+#scroll-btn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: var(--theme-color);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 18px;
+  }
+  
+  #scroll-btn:hover {
+    background-color: #555;
+  }
