--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>Simple Foods</title>
+    <title>Simply Foods</title>
 </head>
 <body> 
 
@@ -29,10 +29,10 @@
     <!-- Navbar Start -->
     <nav>
         <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Simple Foods</a>
+        <a href="#!" class="brand-logo">Simply Foods</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><i class="fa-solid fa-bars"></i></i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#!">Home</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
             <!-- Dropdown Trigger 1 -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Browse<i class="material-icons right"><i class="fa-solid fa-square-caret-down"></i></i></a></li>
             <li><a href="#!">Add Recipe</a></li>
@@ -49,7 +49,7 @@
 
     <!-- Mobile Sidenav Start -->
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="#!">Home</a></li>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
         <li><a href="#!">Browse</a></li>
         <li><a href="#!">Add Recipe</a></li>
         {% if session.user %}
@@ -65,6 +65,7 @@
     <main>
         {% block content %}
         {% endblock %}
+        <button onclick="topFunction()" id="scroll-btn" title="Go to top"><i class="fa-solid fa-circle-chevron-up"></i></button>
     </main>
     <!-- Main Content Section End -->
 
