--- a/appdir/templates/home.html
+++ b/appdir/templates/home.html
@@ -33,7 +33,7 @@
             <div class="col s12 m4 theme-color center main-text">
                 Have a great recipe to share, or just need a platform to save it for later use?
                 <br>
-                <a href="#!">JOIN HERE</a>
+                <a href="{{ url_for('register') }}">Click here to create an account</a>
             </div>
         </div>
     </div>
