--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -20,16 +20,18 @@
         <li><a href="#!">Categories</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
+        <li><a href="#!">My Recipes</a></li>
+        <li class="divider"></li>
         <li><a href="#!">Favourites</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Log Out</a></li>
+        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
     </ul>
     <!-- Dropdown Structure End -->
 
     <!-- Navbar Start -->
     <nav>
         <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Simply Foods</a>
+        <a href="{{ url_for('home') }}" class="brand-logo">Simply Foods</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><i class="fa-solid fa-bars"></i></i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('home') }}">Home</a></li>
@@ -37,10 +39,10 @@
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Browse<i class="material-icons right"><i class="fa-solid fa-square-caret-down"></i></i></a></li>
             <li><a href="#!">Add Recipe</a></li>
             {% if session.user %}
-                <!-- Dropdown Trigger 2 -->
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Profile<i class="material-icons right"><i class="fa-solid fa-square-caret-down"></i></i></a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
-                <li><a href="#!">Log In</a></li>
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
         </ul>
@@ -54,10 +56,10 @@
         <li><a href="#!">Browse</a></li>
         <li><a href="#!">Add Recipe</a></li>
         {% if session.user %}
-            <li><a href="#!">Favourites</a></li>
-            <li><a href="#!">Log Out</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}
-        <li><a href="#!">Log In</a></li>
+        <li><a href="{{ url_for('login') }}">Log In</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
         {% endif %}
     </ul>
