--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -29,7 +29,7 @@
             <div class="card red darken-1">
                 <div class="card-content white-text">
                     <span class="card-title">My Favourites</span>
-                    <p>View and manage recipes you've added to your Favourite collection.</p>
+                    <p>View and manage recipes you've added to your Favourites.</p>
                 </div>
                 <div class="card-action">
                     <a href="#">Go to My Favourites</a>
@@ -60,51 +60,40 @@
         </div>
     </div>
 
-    {% if session.is_superuser %}
+    {% if is_superuser %}
         <h2 class="page-title theme-color center">{{ username }}'s Superuser Options</h2>
 
         <div class="row">
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">My Recipes</span>
-                        <p>View and manage recipes you've added to the website.</p>
+                        <span class="card-title">Manage Recipes</span>
+                        <p>Manage the website's recipes.</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Go to My Recipes</a>
+                        <a href="#">Go to All Recipes</a>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">My Favourites</span>
-                        <p>View and manage recipes you've added to your Favourite collection.</p>
+                        <span class="card-title">Manage Categories</span>
+                        <p>Manager the website's recipe categories.</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Go to My Favourites</a>
+                        <a href="#">Go to All Categories</a>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Add Recipe</span>
-                        <p>Add a new recipe to the website.</p>
+                        <span class="card-title">Manage Users</span>
+                        <p>Manager the website's registered users.</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Add Recipe</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l3">
-                <div class="card red darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">Log Out</span>
-                        <p>Log out of the website.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="{{ url_for('logout') }}">Log Out</a>
+                        <a href="#">Manage Users</a>
                     </div>
                 </div>
             </div>
