Create function for superusers to create and read categories

--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -18,6 +18,8 @@
         <li><a href="#!">Top-Rated</a></li>
         <li class="divider"></li>
         <li><a href="#!">Categories</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Browse All</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
         <li><a href="#!">My Recipes</a></li>
