--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -44,6 +44,10 @@ nav {
     background-color: yellow;
 }
 
+.button-div {
+    margin: 0.5em auto
+}
+
 .page-footer,
 nav {
     background-color: var(--theme-color);
