--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -17,10 +17,10 @@
         <div class="col s12 m6 l3">
             <div class="card red darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">My Recipes</span>
-                    <p>View and manage recipes you've added to the website.</p>
+                    <span class="card-title center">My Recipes</span>
+                    <p class="center">View and manage recipes you've added to the website.</p>
                 </div>
-                <div class="card-action">
+                <div class="card-action center">
                     <a href="#">Go to My Recipes</a>
                 </div>
             </div>
@@ -28,10 +28,10 @@
         <div class="col s12 m6 l3">
             <div class="card red darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">My Favourites</span>
-                    <p>View and manage recipes you've added to your Favourites.</p>
+                    <span class="card-title center">My Favourites</span>
+                    <p class="center">View and manage recipes you've added to your Favourites.</p>
                 </div>
-                <div class="card-action">
+                <div class="card-action center">
                     <a href="#">Go to My Favourites</a>
                 </div>
             </div>
@@ -39,10 +39,10 @@
         <div class="col s12 m6 l3">
             <div class="card red darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">Add Recipe</span>
-                    <p>Add a new recipe to the website.</p>
+                    <span class="card-title center">Add Recipe</span>
+                    <p class="center">Add a new recipe to the website.</p>
                 </div>
-                <div class="card-action">
+                <div class="card-action center">
                     <a href="#">Add Recipe</a>
                 </div>
             </div>
@@ -50,10 +50,10 @@
         <div class="col s12 m6 l3">
             <div class="card red darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title">Log Out</span>
-                    <p>Log out of the website.</p>
+                    <span class="card-title center">Log Out</span>
+                    <p class="center">Log out of the website.</p>
                 </div>
-                <div class="card-action">
+                <div class="card-action center">
                     <a href="{{ url_for('logout') }}">Log Out</a>
                 </div>
             </div>
@@ -67,10 +67,10 @@
             <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Manage Recipes</span>
-                        <p>Manage the website's recipes.</p>
+                        <span class="card-title center">Manage Recipes</span>
+                        <p class="center">Manage the website's recipes.</p>
                     </div>
-                    <div class="card-action">
+                    <div class="card-action center">
                         <a href="#">Go to All Recipes</a>
                     </div>
                 </div>
@@ -78,21 +78,21 @@
             <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Manage Categories</span>
-                        <p>Manager the website's recipe categories.</p>
+                        <span class="card-title center">Manage Categories</span>
+                        <p class="center">Manager the website's recipe categories.</p>
                     </div>
-                    <div class="card-action">
-                        <a href="#">Go to All Categories</a>
+                    <div class="card-action center">
+                        <a href="{{ url_for('get_categories') }}">Go to All Categories</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m6 l4">
                 <div class="card red darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Manage Users</span>
-                        <p>Manager the website's registered users.</p>
+                        <span class="card-title center">Manage Users</span>
+                        <p class="center">Manager the website's registered users.</p>
                     </div>
-                    <div class="card-action">
+                    <div class="card-action center">
                         <a href="#">Manage Users</a>
                     </div>
                 </div>
