Add functionality for superusers to delete categories. Update database schema to include relational keys

--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -48,6 +48,13 @@ nav {
     margin: 0.5em auto
 }
 
+.modal-action,
+.modal {
+    margin: 0 auto;
+    color: var(--theme-color)
+}
+
+
 .page-footer,
 nav {
     background-color: var(--theme-color);
