--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -71,7 +71,7 @@
     <main>
         {% block content %}
         {% endblock %}
-        <button onclick="topFunction()" id="scroll-btn" title="Go to top"><i class="fa-solid fa-circle-chevron-up"></i></button>
+        <button id="scroll-btn" title="Go to top"><i class="fa-solid fa-circle-chevron-up"></i></button>
     </main>
     <!-- Main Content Section End -->
 
