--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -93,7 +93,7 @@
                         <p class="center">Manager the website's registered users.</p>
                     </div>
                     <div class="card-action center">
-                        <a href="#">Manage Users</a>
+                        <a href="{{ url_for('get_users') }}">Manage Users</a>
                     </div>
                 </div>
             </div>
