--- a/appdir/templates/edit_category.html
+++ b/appdir/templates/edit_category.html
@@ -24,6 +24,7 @@
             </div>
         </form>
         <div class="row">
+            <!-- cancel button -->
             <div class="col s12 center-align button-div">
                 <a href="{{ url_for('get_categories') }}">
                     <button class=" btn-large red darken-4 text-shadow">
