--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -30,7 +30,7 @@
                             <span class="card-title">{{ category.category_name }}</span>
                         </div>
                         <div class="card-action">
-                            <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green">Edit</a>
+                            <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green darken-4">Edit</a>
                             <!-- Modal Trigger -->
                             <button data-target="modal_delete_{{ category.category_name.lower() }}" class="btn red darken-4 modal-trigger">Delete</button>
                         </div>
@@ -47,7 +47,7 @@
                                         class="modal-action btn red darken-4 white-text">DELETE CATEGORY</a>
                                 </div>
                                 <div class="col s6 center">
-                                    <button class="modal-action modal-close btn green white-text">CANCEL</button>
+                                    <button class="modal-action modal-close btn green darken-4 white-text">CANCEL</button>
                                 </div>
                             </div>
                         </div>
