--- a/appdir/templates/add_category.html
+++ b/appdir/templates/add_category.html
@@ -17,7 +17,7 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align button-div">
-                    <button type="submit" class="btn-large green darken-2 text-shadow">
+                    <button type="submit" class="btn-large green darken-4 text-shadow">
                         Add Category <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
@@ -27,7 +27,7 @@
             <div class="col s12 center-align button-div">
                 <a href="{{ url_for('get_categories') }}">
                     <button class=" btn-large red darken-4 text-shadow">
-                        Cancel <i class="fas fa-plus-square right"></i>
+                        Cancel
                     </button></a>
             </div>
         </div>
