--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -34,12 +34,12 @@
     <nav>
         <div class="nav-wrapper">
         <a href="{{ url_for('home') }}" class="brand-logo">Simply Foods</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><i class="fa-solid fa-bars"></i></i></a>
+        <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><i class="fa-solid fa-bars"></i></i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <!-- Dropdown Trigger 1 -->
-            <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Browse<i class="material-icons right"><i class="fa-solid fa-square-caret-down"></i></i></a></li>
-            <li><a href="#!">Add Recipe</a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown1">Browse<i class="material-icons right"><i class="fa-solid fa-square-caret-down"></i></i></a></li>
+            <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
@@ -56,7 +56,7 @@
     <ul class="sidenav" id="mobile-demo">
         <li><a href="{{ url_for('home') }}">Home</a></li>
         <li><a href="#!">Browse</a></li>
-        <li><a href="#!">Add Recipe</a></li>
+        <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
         {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
