--- a/appdir/templates/edit_recipe.html
+++ b/appdir/templates/edit_recipe.html
@@ -60,7 +60,7 @@
         </form>
         <div class="row">
             <div class="col s12 center-align button-div">
-                <a href="{{ url_for('get_recipes') }}">
+                <a class="btn-cancel">
                     <button class=" btn-large red darken-4 text-shadow">
                         Cancel
                     </button></a>
