--- a/appdir/templates/manage_recipes.html
+++ b/appdir/templates/manage_recipes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="page-title theme-color center">All Recipes</h2>
+    <h2 class="page-title theme-color center">Manage Recipes</h2>
 
     <div class="row">
         <div class="col s12 center-align">
