--- a/appdir/templates/add_category.html
+++ b/appdir/templates/add_category.html
@@ -25,7 +25,7 @@
         </form>
         <div class="row">
             <div class="col s12 center-align button-div">
-                <a href="{{ url_for('get_categories') }}">
+                <a class="btn-cancel">
                     <button class=" btn-large red darken-4 text-shadow">
                         Cancel
                     </button></a>
