--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -13,11 +13,7 @@
 
     <!-- Dropdown Structure Start -->
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Latest</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Top-Rated</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Categories</a></li>
+        <li><a href="{{ url_for('get_categories') }}">Categories</a></li>
         <li class="divider"></li>
         <li><a href="#!">Browse All</a></li>
     </ul>
@@ -55,7 +51,8 @@
     <!-- Mobile Sidenav Start -->
     <ul class="sidenav" id="mobile-demo">
         <li><a href="{{ url_for('home') }}">Home</a></li>
-        <li><a href="#!">Browse</a></li>
+        <li><a href="{{ url_for('get_categories') }}">Browse by Category</a></li>
+        <li><a href="#">Browse All Recipes</a></li>
         <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
         {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
