--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -1,15 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="page-title theme-color center">Manage Categories</h2>
-
-    <div class="row">
-        <div class="col s12 center-align">
-            <a href="{{ url_for('add_category') }}" class="btn-large red accent-4 text-shadow">
-                Add Category <i class="fas fa-plus-square right"></i>
-            </a>
-        </div>
-    </div>
+    <h2 class="page-title theme-color center">Categories</h2>
 
     <div class="row">
         {% if categories|length > 0 %}
@@ -18,34 +10,30 @@
                     <div class="card red accent-5 text-shadow center-align">
                         <div class="card-content white-text">
                             <span class="card-title">{{ category.category_name }}</span>
+                            <p>
+                                {% set listLength = namespace(n = 0) %}
+                                {% for recipe in recipes %}
+                                    {% if recipe.category_id == category.id %}
+                                        {% set listLength.n = listLength.n + 1 %}
+                                    {% endif %}
+                                {% endfor %}
+                                {% if listLength.n == 1 %}
+                                    Contains {{ listLength.n }} Recipe
+                                {% elif listLength.n == 0 %}
+                                    Contains No Recipes
+                                {% else %}
+                                    Contains {{ listLength.n }} Recipes
+                                {% endif %}
+                            </p>
                         </div>
                         <div class="card-action">
-                            <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green darken-4">Edit</a>
-                            <!-- Modal Trigger -->
-                            <button data-target="modal_delete_{{ category.category_name.lower() }}" class="btn red darken-4 modal-trigger">Delete</button>
-                        </div>
-                        <!-- Modal Structure -->
-                        <div id="modal_delete_{{ category.category_name.lower() }}" class="modal">
-                            <div class="modal-content red accent-4 white-text">
-                                <h3>Warning!</h3>
-                                <p>Deleting a category will also delete all recipes which are assigned to the category.</p>
-                                <p>Are you sure you want to permanently delete the <strong>{{ category.category_name }}</strong> category and all its associated recipes?</p>
-                            </div>
-                            <div class="modal-footer">
-                                <div class="col s6 center">
-                                    <a href="{{ url_for('delete_category', category_id=category.id) }}"
-                                        class="modal-action btn red darken-4 white-text">DELETE CATEGORY</a>
-                                </div>
-                                <div class="col s6 center">
-                                    <button class="modal-action modal-close btn green darken-4 white-text">CANCEL</button>
-                                </div>
-                            </div>
+                            <a href="{{ url_for('view_category', category_id=category.id) }}" class="btn red darken-4">View Recipes</a>
                         </div>
                     </div>
                 </div>
             {% endfor %}
         {% else %}
-            <h3 class="theme-color center">No results found</h2>
+            <h3 class="theme-color center">No results found</h3>
         {% endif %}
     </div>
 
