--- a/appdir/templates/edit_user.html
+++ b/appdir/templates/edit_user.html
@@ -40,7 +40,7 @@
         <div class="row">
             <!-- cancel button -->
             <div class="col s12 center-align button-div">
-                <a href="{{ url_for('get_users') }}">
+                <a class="btn-cancel">
                     <button class=" btn-large red darken-4 text-shadow">
                         Cancel <i class="fas fa-plus-square right"></i>
                     </button></a>
